clusters/shire/infrastructure/controllers/cloudflared.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflared
  labels:
    pod-security.kubernetes.io/enforce: restricted
