clusters/shire/infrastructure/controllers/cnpg.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg-system
  labels:
    pod-security.kubernetes.io/enforce: baseline
