clusters/shire/infrastructure/controllers/local-path-provisioner.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: local-path-storage
  labels:
    pod-security.kubernetes.io/enforce: privileged
