clusters/shire/infrastructure/controllers/tailscale-operator.yaml
# https://tailscale.com/kb/1236/kubernetes-operator
---
apiVersion: v1
kind: Namespace
metadata:
  name: tailscale
  labels:
    pod-security.kubernetes.io/enforce: privileged
