clusters/shire/infrastructure/controllers/traefik.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    pod-security.kubernetes.io/enforce: restricted
