clusters/shire/infrastructure/controllers/headlamp.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
  labels:
    pod-security.kubernetes.io/enforce: baseline
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: headlamp
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: headlamp
      port:
        number: 80
  tls:
    - hosts:
        - headlamp
